tree-sitter-ambient/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.function_definition,
        $.extern_function_definition,
        $.const_definition,
        $.type_definition,
        $.struct_definition,
        $.enum_definition,
        $.ability_definition,
        $.trait_definition,
        $.impl_definition,
        $.use_declaration
      ),

    // ─────────────────────────────────────────────────────────────────────────
    // Declarations
    // ─────────────────────────────────────────────────────────────────────────

    function_definition: ($) =>
      seq(
        optional($.visibility),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(seq(":", field("return_type", $._type))),
        optional($.ability_clause),
        field("body", $.block)
      ),

    // `extern fn` declares a body-less signature implemented by the host;
    // it ends with `;` and takes no ability clause (extern fns are pure).
    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(field("name", $.identifier), optional(seq(":", field("type", $._type)))),

    ability_clause: ($) => seq("with", $._ability_list),

    _ability_list: ($) =>
      prec.left(seq($._ability_ref, repeat(seq(",", $._ability_ref)))),

    _type: ($) =>
      choice(
        $.identifier,
        $.generic_type,
        $.function_type,
        $.tuple_type,
        $.record_type,
        $.ability_type,
        $.handler_type,
        $.unit_type,
        $.never_type,
        $.infer_type
      ),

    generic_type: ($) =>
      seq($.identifier, "<", $._type_list, ">"),

    unit_type: ($) => seq("(", ")"),

    _type_list: ($) => seq($._type, repeat(seq(",", $._type))),

    _expression: ($) =>
      choice(
        $.identifier,
        $.number,
        $.string,
        $.boolean,
        $.unit,
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.perform_expression,
        $.scoped_identifier,
        $.member_expression,
        $.tuple_index_expression,
        $.index_expression,
        $.if_expression,
        $.match_expression,
        $.block,
        $.lambda,
        $.tuple,
        $.list_literal,
        $.record_literal,
        $.with_handle_expression,
        $.sandbox_expression,
        $.handler_literal,
        $.parenthesized_expression
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(
          PREC.COMPARE,
          seq(
            $._expression,
            choice("==", "!=", "<", "<=", ">", ">="),
            $._expression
          )
        ),
        prec.left(PREC.ADD, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(
          PREC.MULT,
          seq($._expression, choice("*", "/", "%"), $._expression)
        )
      ),

    call_expression: ($) =>
      prec(PREC.CALL, seq($._expression, $.argument_list)),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq($._expression, repeat(seq(",", $._expression)))),
        ")"
      ),

    perform_expression: ($) => prec(PREC.PERFORM, seq($._expression, "!")),

    // Namespace / path access uses `::` (`core::math::abs`, `platform::Fs`).
    scoped_identifier: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("path", choice($.identifier, $.scoped_identifier)),
          "::",
          field("name", $.identifier)
        )
      ),

    // Value member access uses `.` (`record.field`).
    member_expression: ($) =>
      prec(PREC.MEMBER, seq($._expression, ".", $.identifier)),

    tuple_index_expression: ($) =>
      prec(PREC.MEMBER, seq($._expression, ".", $.number)),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $._expression),
          field("then", $.block),
          optional(seq("else", field("else", choice($.block, $.if_expression))))
        )
      ),

    match_expression: ($) =>
      seq("match", field("value", $._expression), "{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $._pattern),
        optional(seq("if", field("guard", $._expression))),
        "=>",
        field("body", $._expression),
        optional(",")
      ),

    _pattern: ($) =>
      choice(
        $.identifier,
        $.number,
        $.string,
        $.boolean,
        $.wildcard_pattern,
        $.tuple_pattern,
        $.variant_pattern,
        $.record_pattern
      ),

    wildcard_pattern: ($) => "_",

    variant_pattern: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", optional(seq($._pattern, repeat(seq(",", $._pattern)))), ")"))
      ),

    block: ($) => seq("{", repeat($._statement), optional($._expression), "}"),

    _statement: ($) => choice($.let_statement, $.expression_statement),

    let_statement: ($) =>
      seq(
        "let",
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        ";"
      ),

    lambda: ($) =>
      prec.right(seq($.lambda_parameters, "=>", $._expression)),

    lambda_parameters: ($) =>
      seq(
        "(",
        optional(seq($.lambda_parameter, repeat(seq(",", $.lambda_parameter)))),
        ")"
      ),

    lambda_parameter: ($) =>
      seq(field("name", $.identifier), optional(seq(":", field("type", $._type)))),

    list_literal: ($) =>
      seq(
        "[",
        optional(seq($._expression, repeat(seq(",", $._expression)), optional(","))),
        "]"
      ),

    // Record construction. `TypeName { field: value }` (typed) or a bare
    // `{ field: value }` (structural). The type prefix is a plain or
    // `::`-qualified name. At least one `field:` is required — an empty `{}`
    // is always a block, never a record — which is what disambiguates a bare
    // record from a block and a typed record from `expr { block }`.
    record_literal: ($) =>
      seq(
        optional(field("type", choice($.identifier, $.scoped_identifier))),
        "{",
        $.record_fields,
        "}"
      ),

    record_fields: ($) =>
      seq($.record_field, repeat(seq(",", $.record_field)), optional(",")),

    record_field: ($) =>
      seq(field("name", $.identifier), ":", field("value", $._expression)),

    with_handle_expression: ($) =>
      prec.right(
        seq(
          "with",
          $.handler_list,
          "handle",
          field("body", $._expression),
          optional(seq("else", $._expression))
        )
      ),

    handler_list: ($) =>
      seq($._expression, repeat(seq(",", $._expression))),

    handler_literal: ($) =>
      seq("{", repeat($.handler_method), "}"),

    handler_method: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("ability", $.identifier),
          "::",
          field("method", $.identifier),
          $.parameter_list,
          "=>",
          choice($.block, seq($._expression, optional(",")))
        )
      ),

    sandbox_expression: ($) =>
      seq(
        "sandbox",
        optional(seq("with", $._ability_list)),
        $.block
      ),

    unit: ($) => seq("(", ")"),

    // ─────────────────────────────────────────────────────────────────────────
    // Literals
    // ─────────────────────────────────────────────────────────────────────────

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    number: ($) => /\d+(\.\d+)?/,

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.string_content,
            $.escape_sequence,
            $.string_interpolation
          )
        ),
        '"'
      ),

    // A run of ordinary characters, or a lone `$` that does not open an
    // interpolation. The `${` case is claimed by string_interpolation, which
    // wins by longest-match, so a bare `$` (even right before the closing
    // quote, as in "$") stays literal text.
    string_content: ($) => /[^"\\$]+|\$/,

    string_interpolation: ($) =>
      seq("${", $._expression, "}"),
