tree-sitter-ambient/test/corpus/expressions.txt
================================================================================
Binary expressions
================================================================================

fn test(): number {
  1 + 2 * 3
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (binary_expression
        (number)
        (binary_expression (number) (number))))))

================================================================================
Comparison expressions
================================================================================

fn test(): bool {
  x > 0 && y < 10
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (binary_expression
        (binary_expression (identifier) (number))
        (binary_expression (identifier) (number))))))

================================================================================
If expression
================================================================================

fn test(): number {
  if x > 0 {
    1
  } else {
    0
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (if_expression
        condition: (binary_expression (identifier) (number))
        then: (block (number))
        else: (block (number))))))

================================================================================
Match expression
================================================================================

fn test(): number {
  match opt {
    Some(x) => x,
    None => 0,
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (match_expression
        value: (identifier)
        (match_arm
          pattern: (variant_pattern name: (identifier) (identifier))
          body: (identifier))
        (match_arm
          pattern: (identifier)
          body: (number))))))

================================================================================
Match on qualified variant patterns
================================================================================

fn test(): number {
  match s {
    shapes::Shape::Circle(r) => r,
    pkg::shapes::Shape::Dot => 0,
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (match_expression
        value: (identifier)
        (match_arm
          pattern: (variant_pattern
            name: (scoped_identifier
              path: (scoped_identifier
                path: (identifier)
                name: (identifier))
              name: (identifier))
            (identifier))
          body: (identifier))
        (match_arm
          pattern: (variant_pattern
            name: (scoped_identifier
              path: (scoped_identifier
                path: (scoped_identifier
                  path: (identifier)
                  name: (identifier))
                name: (identifier))
              name: (identifier)))
          body: (number))))))

================================================================================
Lambda expression
================================================================================

fn test(): number {
  List::map(nums, (x) => x + 1)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (call_expression
        (scoped_identifier path: (identifier) name: (identifier))
        (argument_list
          (identifier)
          (lambda
            (lambda_parameters (lambda_parameter name: (identifier)))
            (binary_expression (identifier) (number))))))))

================================================================================
String interpolation
================================================================================

fn test(): string {
  "Hello, ${name}!"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (string
        (string_content)
        (string_interpolation (identifier))
        (string_content)))))

================================================================================
Literal dollar sign
================================================================================

fn test(): string {
  "Cost: $5"
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (string
        (string_content)
        (string_content)
        (string_content)))))

================================================================================
List literal
================================================================================

fn test(): List<number> {
  [1, 2, 3]
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (generic_type (identifier) (identifier))
    body: (block
      (list_literal (number) (number) (number)))))

================================================================================
Record literal
================================================================================

fn test(): Point {
  { x: 1, y: 2 }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (record_literal
        (record_fields
          (record_field name: (identifier) value: (number))
          (record_field name: (identifier) value: (number)))))))

================================================================================
Typed record literal
================================================================================

fn test(): Money {
  Money { cents: 5 }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (record_literal
        type: (identifier)
        (record_fields
          (record_field name: (identifier) value: (number)))))))

================================================================================
Qualified typed record literal
================================================================================

fn test(): Shape {
  pkg::shapes::Shape { radius: 1 }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (record_literal
        type: (scoped_identifier
          path: (scoped_identifier
            path: (identifier)
            name: (identifier))
          name: (identifier))
        (record_fields
          (record_field name: (identifier) value: (number)))))))

================================================================================
Let statement
================================================================================

fn test(): number {
  let x = 42;
  x
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (let_statement pattern: (identifier) value: (number))
      (identifier))))

================================================================================
Perform expression
================================================================================

fn test(): ()
  with Console
{
  Console::print!("hello")
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (unit_type)
    (ability_clause (identifier))
    body: (block
      (call_expression
        (perform_expression
          (scoped_identifier path: (identifier) name: (identifier)))
        (argument_list (string (string_content)))))))

================================================================================
Tuple index expression
================================================================================

fn test(): number {
  pair.0
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (tuple_index_expression (identifier) (number)))))

================================================================================
Match with guard
================================================================================

fn test(): number {
  match x {
    n if n > 0 => n,
    _ => 0
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (match_expression
        value: (identifier)
        (match_arm
          pattern: (identifier)
          guard: (binary_expression (identifier) (number))
          body: (identifier))
        (match_arm
          pattern: (wildcard_pattern)
          body: (number))))))

================================================================================
Scoped identifier (namespace path)
================================================================================

fn test(): number {
  core::math::abs(1, 2)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (call_expression
        (scoped_identifier
          path: (scoped_identifier path: (identifier) name: (identifier))
          name: (identifier))
        (argument_list (number) (number))))))

================================================================================
Qualified perform on a namespaced ability
================================================================================

fn test(): string
  with FileSystem
{
  platform::FileSystem::read!(path)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    (ability_clause (identifier))
    body: (block
      (call_expression
        (perform_expression
          (scoped_identifier
            path: (scoped_identifier path: (identifier) name: (identifier))
            name: (identifier)))
        (argument_list (identifier))))))

================================================================================
Field access stays a member expression
================================================================================

fn test(): number {
  point.x
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (member_expression (identifier) (identifier)))))

================================================================================
Trailing comma in call arguments
================================================================================

fn f(): String {
  concat(
    a,
    b,
  )
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (identifier))))))

================================================================================
Workspace-rooted path expression
================================================================================

fn f(): Number {
  ::other_pkg::greet()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (call_expression
        (scoped_identifier
          path: (scoped_identifier
            name: (identifier))
          name: (identifier))
        (argument_list)))))
