tree-sitter-ambient/test/corpus/handlers.txt
================================================================================
Handle expression
================================================================================

fn test(): number {
  with { Exception::throw(e) => { resume(0) } } handle compute()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (with_handle_expression
        (handler_list
          (handler_literal
            (handler_method
              ability: (identifier)
              method: (identifier)
              (parameter_list (parameter name: (identifier)))
              (block
                (call_expression (identifier) (argument_list (number)))))))
        body: (call_expression (identifier) (argument_list))))))

================================================================================
Handler value in list
================================================================================

fn test(): number {
  with mock_fs handle unit_test()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (with_handle_expression
        (handler_list (identifier))
        body: (call_expression (identifier) (argument_list))))))

================================================================================
Multi-arm handler literal
================================================================================

fn test(): number {
  with { Stdio::out(m) => resume(()), Exception::throw(e) => resume(e) } handle body()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (with_handle_expression
        (handler_list
          (handler_literal
            (handler_method
              ability: (identifier)
              method: (identifier)
              (parameter_list (parameter name: (identifier)))
              (call_expression (identifier) (argument_list (unit))))
            (handler_method
              ability: (identifier)
              method: (identifier)
              (parameter_list (parameter name: (identifier)))
              (call_expression (identifier) (argument_list (identifier))))))
        body: (call_expression (identifier) (argument_list))))))

================================================================================
Handle with else
================================================================================

fn test(): number {
  with { Exception::throw(e) => 0 } handle risky() else double(r)
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (with_handle_expression
        (handler_list
          (handler_literal
            (handler_method
              ability: (identifier)
              method: (identifier)
              (parameter_list (parameter name: (identifier)))
              (number))))
        body: (call_expression (identifier) (argument_list))
        (call_expression (identifier) (argument_list (identifier)))))))

================================================================================
Sandbox expression
================================================================================

fn test(): number {
  sandbox with Log {
    pure_code()
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (sandbox_expression
        (identifier)
        (block
          (call_expression (identifier) (argument_list)))))))

================================================================================
Pure sandbox
================================================================================

fn test(): number {
  sandbox {
    42
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (sandbox_expression
        (block (number))))))

================================================================================
Fully-qualified handler arm as a value
================================================================================

fn f(): Number {
  let h = {
    core::system::Stdio::out(msg) => resume(())
  };
  with h handle g()
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    return_type: (identifier)
    body: (block
      (let_statement
        pattern: (identifier)
        value: (handler_literal
          (handler_method
            ability: (scoped_identifier
              path: (scoped_identifier
                path: (identifier)
                name: (identifier))
              name: (identifier))
            method: (identifier)
            (parameter_list
              (parameter
                name: (identifier)))
            (call_expression
              (identifier)
              (argument_list
                (unit))))))
      (with_handle_expression
        (handler_list
          (identifier))
        body: (call_expression
          (identifier)
          (argument_list))))))
